list all the contributions for a user per group
